--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "^4.15.0",
     "@ionic-native/google-maps": "^4.14.0",
+    "@ionic-native/native-audio": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "^4.15.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
-    "@types/googlemaps": "^3.30.13",
     "cordova-android": "7.1.1",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
@@ -37,6 +37,7 @@
     "cordova-plugin-ionic": "5.2.5",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-nativeaudio": "3.0.9",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -75,7 +76,8 @@
         "UPDATE_API": "https://api.ionicjs.com",
         "MAX_STORE": "2",
         "MIN_BACKGROUND_DURATION": "30"
-      }
+      },
+      "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
       "android",
