--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "^4.15.0",
     "@ionic-native/dialogs": "^4.15.0",
     "@ionic-native/google-maps": "^4.14.0",
+    "@ionic-native/image-resizer": "^4.15.0",
     "@ionic-native/native-audio": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "^4.15.0",
