photobooth page camera and albums works

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^4.16.0",
     "@ionic-native/core": "^4.15.0",
     "@ionic-native/dialogs": "^4.15.0",
     "@ionic-native/google-maps": "^4.14.0",
@@ -31,6 +32,7 @@
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.1",
     "cordova-browser": "5.0.4",
+    "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-dialogs": "2.0.1",
     "cordova-plugin-file": "6.0.1",
@@ -82,7 +84,8 @@
         "MIN_BACKGROUND_DURATION": "30"
       },
       "cordova-plugin-nativeaudio": {},
-      "cordova-plugin-dialogs": {}
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android",
