--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
+    "browsers": "1.0.2",
     "cordova-android": "7.1.1",
     "cordova-browser": "5.0.4",
     "cordova-plugin-camera": "4.0.3",
